Make things mildly prettier and more usable

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2,3 +2,7 @@ div.modal {
     width: 680px;
     height: 520px;
 }
+
+body {
+    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+}
