--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,38 @@
     <script id='camera-list-item-template' type='text/x-handlebars-templates'>
       <li><a href="/cameras/{{name}}">{{name}}</a></li>
     </script>
+    <script id='menu-list-item-template' type='text/x-handlebars-templates'>
+      <li><a href="/cameras/{{name}}">{{name}}</a></li>
+    </script>
     <script id='events-list-item-template' type='text/x-handlebars-templates'>
       <li><a href="#{{id}}">{{name}}</a></li>
     </script>
     {% endraw %}
   </head>
   <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="/">Monitor Viewer</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav" id='camera-list'>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div id="main">
+
+      </div>
+    </div>
+
     <div class="modal hide fade" id="event-viewer">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -25,11 +51,6 @@
           Flash player missing?
         </div>
       </div>
-    </div>
-
-    <h1>Monitor Viewer</h1>
-    <div id="main">
-
     </div>
 
     <script src="/static/js/jquery.js"></script>
