--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Monitor Viewer</title>
+    <title>Motion Viewer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/timeline.css" rel="stylesheet">
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">Monitor Viewer</a>
+          <a class="brand" href="/">Motion Viewer</a>
           <div class="nav-collapse collapse">
             <ul class="nav" id='camera-list'>
             </ul>
