--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,12 @@
       </div>
     </div>
 
+    <div class="navbar navbar-fixed-bottom">
+      <div class="navbar-inner">
+        <a class="pull-right credit" href="http://github.com/tangerilli/motionviewer"><img src="/static/img/github.png"></a>
+      </div>
+    </div>
+
     <div class="modal hide fade" id="event-viewer">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
